[package]
name = "proplate"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.10"
inquire = "0.6.2"
proplate-core = { version = "0.2.3", path = "../core" }
proplate-errors = { version = "0.2.0", path = "../errors" }
proplate-integration = { version = "0.2.0", path = "../integration" }
proplate-tui = { version = "0.2.0", path = "../tui" }
[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
assert_cmd = "2.0.12"

