[package]
name = "proplate-core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proplate-tui = { path = "../tui",  version = "0.2.0"  }
proplate-integration = { version = "0.2.0", path = "../integration" }
proplate-errors = { version = "0.2.0", path = "../errors" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
inquire = "0.6.2"
regex = "1.10.2"
[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
