[package]
name = "proplate-core"
description = "Proplate is a CLI tool that allows you to quickly create and set up project structures based on templates, and also create your own templates for your future projects."
version = "0.4.0"
authors = ["Yume Saiko <yumii.saiko@gmail.com>"]
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["productivity", "template", "generate", "create"]
license = "MIT"
repository = "https://github.com/YumeT023/proplate"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proplate-tui = { path = "../tui",  version = "0.2.0"  }
proplate-integration = { version = "0.2.0", path = "../integration" }
proplate-errors = { version = "0.2.0", path = "../errors" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
inquire = "0.6.2"
regex = "1.10.2"
[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
